# PySCIPOpt-ML

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_wheels.yml
docs/: api-reference.rst  basics.rst  bibliography.rst  conf.py  example_advanced.rst  example_basic.rst  formulations.rst  index.rst  ref.bib  requirements.txt  sklearn.rst  supported.rst  surrogatelib.rst
docs/api/: AbstractPredictorConstr.rst  CentroidClusterConstr.rst  DecisionTreeConstr.rst  GradientBoostingConstr.rst  KerasConstr.rst  LightGBMConstr.rst  LinearRegressionConstr.rst  LogisticRegressionConstr.rst  MLPConstr.rst  MultiOutputConstr.rst  ONNXConstr.rst  PLSRegressionConstr.rst  PipelineConstr.rst  RandomForestConstr.rst  SKGetter.rst  SequentialConstr.rst  SupportVectorConstr.rst  XGBoostConstr.rst
src/pyscipopt_ml/: __init__.py  _version.py  add_predictor.py  exceptions.py  registered_predictors.py
src/pyscipopt_ml/keras/: __init__.py  keras.py
src/pyscipopt_ml/lightgbm/: __init__.py  lgbgetter.py  lightgbm_constr.py
src/pyscipopt_ml/modelling/: __init__.py  base_predictor_constraint.py  get_convertor.py  var_utils.py
src/pyscipopt_ml/onnx/: __init__.py  neural_net_onnx.py
src/pyscipopt_ml/sklearn/: __init__.py  base_regression.py  centroid_cluster.py  decision_tree.py  gradient_boosting.py  linear_regression.py  logistic_regression.py  mlp.py  multi_output.py  pipeline.py  pls.py  preprocessing.py  random_forest.py  skgetter.py  support_vector.py
src/pyscipopt_ml/torch/: __init__.py  sequential.py
src/pyscipopt_ml/xgboost/: __init__.py  xgbgetter.py  xgboost_constr.py
tests/: instance_generation.py  test_adversarial_example.py  test_airline_satisfcation.py  test_auto_manufacturer.py  test_city_manager.py  test_formulation_error.py  test_input_types.py  test_palatable_diet_problem.py  test_simple_function_approximation.py  test_tree_planting.py  test_water_potability.py  test_wine_manufacturer.py  test_workload_dispatching.py  utils.py
tests/data/: Car_sales.csv  Tree_Data.csv  apartments.csv  keras_3_42_1_0.onnx  keras_3_42_1_1.onnx  sk_3_42_0_0_relu.onnx  sk_3_42_1_0_logistic.onnx  sk_3_42_1_0_tanh.onnx  tree_survivability.csv  water_quality.csv
tests/data/WDP/: ts0.txt  ts1.txt  ts10.txt  ts11.txt  ts12.txt  ts13.txt  ts14.txt  ts15.txt  (+40 more)
(+11 files in other folders)
